# S0L4R

./: CMakeLists.txt  main.cpp  notes.md
include/: astre.h  physique.h
src/: astre.cpp  main.cpp  physique.cpp
